refactor: pagination for videos